slurm_output/old/slurm-48418424.out
compute-a-16-100.o2.rc.hms.harvard.edu
  File "multithreading.py", line 64
    processes.append(p)
            ^
SyntaxError: invalid syntax
